# mes-template-0610

./: .coderabbit.yml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.infra.yml  docker-compose.yml
.github/: labels.json  pull_request_template.md
.github/workflows/: deploy-agent.yml  deploy-api.yml  deploy-frontend.yml  deploy-realtime.yml
agolive-agent/: .env.example  Dockerfile  config.py  main.py  pyproject.toml
agolive-agent/pytest-cache-files-hnyd_w8y/v/cache/: lastfailed
agolive-agent/routers/: internal.py
agolive-agent/tests/: test_internal.py
backend/: .env.example  Dockerfile  build.gradle.kts  docker-compose.yml
backend/src/main/resources/: application-prod.yml  (+1 more)
docs/: architecture.md  infra.md  prd.md
frontend/: AUTH_MODEL.md  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/messages/: en.json  ko.json
frontend/src/i18n/: config.ts
infra/: terraform.tfstate
infra/docker/: docker-compose.prod.yml
infra/docker/nginx/: nginx.prod.conf
infra/monitoring/prometheus/: local.yml  prod.yml
infra/scripts/: deploy.sh  init-ssl.sh  renew-cert.sh  setup-ec2.sh
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
nginx/: nginx.conf
personalmd/: phase2설명.md  phase3설명.md
realtime/: .env.example  Dockerfile  go.mod  go.sum  main.go
realtime/config/: config.go
realtime/game/: movement.go  movement_test.go
realtime/handler/: ws.go  ws_test.go
realtime/hub/: hub.go  hub_test.go
realtime/model/: event.go
(+292 files in other folders)
